[gd_scene load_steps=28 format=2]

[ext_resource path="res://src/Main/StateMachine/StateMachine.gd" type="Script" id=1]
[ext_resource path="res://src/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://src/Player/States/Move.gd" type="Script" id=3]
[ext_resource path="res://assets/Sophie/idle.png" type="Texture" id=4]
[ext_resource path="res://assets/Sophie/running.png" type="Texture" id=5]
[ext_resource path="res://assets/Sophie/run-to-idle.png" type="Texture" id=6]
[ext_resource path="res://assets/Sophie/idle-to-run.png" type="Texture" id=7]
[ext_resource path="res://assets/Sophie/turn-around.png" type="Texture" id=8]
[ext_resource path="res://src/Player/States/Idle.gd" type="Script" id=9]
[ext_resource path="res://src/Player/States/Air.gd" type="Script" id=10]
[ext_resource path="res://src/Player/States/Run.gd" type="Script" id=11]
[ext_resource path="res://assets/Sophie/jump.png" type="Texture" id=12]
[ext_resource path="res://assets/Sophie/fall.png" type="Texture" id=13]
[ext_resource path="res://assets/Sophie/jump-to-fall.png" type="Texture" id=14]
[ext_resource path="res://assets/Sophie/landing.png" type="Texture" id=15]
[ext_resource path="res://src/Player/Damage.gd" type="Script" id=16]

[sub_resource type="Animation" id=1]
resource_name = "Fall"
length = 0.2
loop = true
step = 0.0666667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Fall:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0666667, 0.133333 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=2]
length = 3.6
loop = true
step = 0.0666667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 6, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=3]
length = 0.2
step = 0.0666667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/IdleToRun:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0666667, 0.133333 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Jump"
length = 0.2
loop = true
step = 0.0666667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Jump:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0666667, 0.133333 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=5]
resource_name = "JumpToFall"
length = 0.266667
step = 0.0666667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/JumpToFall:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0666667, 0.133333, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Landing"
length = 0.266667
step = 0.0666667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Landing:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0666667, 0.133333, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=7]
length = 0.666667
loop = true
step = 0.0666667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Run:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667, 0.533333, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=8]
length = 0.2
step = 0.0666667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/RunToIdle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0666667, 0.133333 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}

[sub_resource type="Animation" id=9]
length = 0.266667
step = 0.0666667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/TurnAround:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0666667, 0.133333, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 4.96056, 15 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 4.17017, 17.8865 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 0, -66 )
scale = Vector2( 4, 4 )
collision_layer = 2147483649
collision_mask = 6
script = ExtResource( 2 )

[node name="Sprite" type="Node2D" parent="."]

[node name="Idle" type="Sprite" parent="Sprite"]
texture = ExtResource( 4 )
hframes = 12

[node name="Run" type="Sprite" parent="Sprite"]
visible = false
position = Vector2( -1, 0 )
texture = ExtResource( 5 )
hframes = 10
frame = 1

[node name="IdleToRun" type="Sprite" parent="Sprite"]
visible = false
texture = ExtResource( 7 )
hframes = 3

[node name="RunToIdle" type="Sprite" parent="Sprite"]
visible = false
texture = ExtResource( 6 )
hframes = 4
frame = 3

[node name="TurnAround" type="Sprite" parent="Sprite"]
visible = false
texture = ExtResource( 8 )
hframes = 4

[node name="Jump" type="Sprite" parent="Sprite"]
visible = false
position = Vector2( 0, 2 )
texture = ExtResource( 12 )
hframes = 3
frame = 2

[node name="Fall" type="Sprite" parent="Sprite"]
visible = false
position = Vector2( 0, 2 )
texture = ExtResource( 13 )
hframes = 3

[node name="JumpToFall" type="Sprite" parent="Sprite"]
visible = false
position = Vector2( 0, 2 )
texture = ExtResource( 14 )
hframes = 5

[node name="Landing" type="Sprite" parent="Sprite"]
visible = false
texture = ExtResource( 15 )
hframes = 4
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Fall = SubResource( 1 )
anims/Idle = SubResource( 2 )
anims/IdleToRun = SubResource( 3 )
anims/Jump = SubResource( 4 )
anims/JumpToFall = SubResource( 5 )
anims/Landing = SubResource( 6 )
anims/Run = SubResource( 7 )
anims/RunToIdle = SubResource( 8 )
anims/TurnAround = SubResource( 9 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 1 )
initial_state = NodePath("Move/Idle")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Idle" type="Node" parent="StateMachine/Move"]
script = ExtResource( 9 )

[node name="Run" type="Node" parent="StateMachine/Move"]
script = ExtResource( 11 )

[node name="Air" type="Node" parent="StateMachine/Move"]
script = ExtResource( 10 )

[node name="Damage" type="Node" parent="StateMachine/Move"]
script = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.5 )
shape = SubResource( 10 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -6, 6.75, -4, 16.5, 3.95583, 16.4866, 6, 6.5, 6, -13.5, -6, -13.5 )
disabled = true

[node name="Enemy Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy Detector"]
modulate = Color( 0.431373, 0.00784314, 0.384314, 1 )
position = Vector2( 4.23516e-22, 1.58343 )
scale = Vector2( 1.4392, -0.842888 )
shape = SubResource( 11 )
[connection signal="body_entered" from="Enemy Detector" to="StateMachine/Move" method="_on_Enemy_Detector_body_entered"]
